# Felex

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Felex_1.0.0_x64_en-US.msi  Felex_1.0.0_x64_ru-RU.msi  Felex_1.0.1_x64_en-US.msi  Felex_1.0.1_x64_ru-RU.msi  INSTALL.md  LICENSE  README.md  README.ru.md  package-lock.json  package.json  tailwind.config.js  technical_report.md  vite.config.ts
.claude/benchmarks/: Felex_Benchmark_Discussion.md  Felex_Benchmark_Supplementary.md  Felex_Figure_Index.md  felex_jds_manuscript.tex
.claude/docs/: Felex_Technical_Documentation_ru.md  Felex_Technical_Investigation_2026-03-26.md
database/: config.py  discovery.py  main.py  models.py  output.py  parser.py  progress.py  requirements.txt  translator.py
database/.claude/: settings.local.json
database/.git-backup-nested/: index
database/data/: meta_template.py  progress.json  static_translations.json
database/output/: 2026-03-19-feed-price-scraper-design.md  2026-03-19-feed-price-scraper-plan.md  animal_feeds.json  concentrated_feeds.json  green_feeds.json  industrial_byproducts.json  mineral_supplements.json  mixed_feeds.json  nitrogen_compounds.json  rough_feeds.json  succulent_feeds.json
database/schema/: feed_database.schema.json
database/tests/: conftest.py  test_discovery.py  test_integration.py  test_models.py  test_output.py  test_parser.py  test_progress.py  test_translator.py
deliverables/agent_publication_benchmark_2026-04-03_qwen4b_4096/: agent_benchmark_results.json
docs/: BENCHMARKS.md
frontend/: Felex_Technical_Documentation.docx  index.html  technical_report.md
frontend/src/: App.tsx  main.tsx
memory/: 00-Index.md  01-System-Overview.md  02-Domain-Rules.md  03-Data-Model.md  04-Content-Lifecycle.md  05-API-Surface.md  06-Customizations-vs-Vendor.md  07-Security-Rules.md  08-User-Workflows.md  09-Change-Log.md  10-Decision-Records.md  11-Glossary.md  12-Dependency-Map.md  13-Developer-Operations.md  13-Operating-Rules.md  14-Session-Inbox.md  15-Roadmap-and-Future-Work.md  16-Implementation-Audit-and-Code-Graph.md  90-Graph-Report.md
scripts/: build-installer.ps1  build_feed_runtime_artifacts.py  generate-icons.cjs  generate-icons.ps1  generate_docs.py  graph_report.py  reindex.py  setup.bat  setup.ps1  validate_memory.py
src/: lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  main.rs
src/agent/: config.rs  embeddings.rs  filter.rs  llm.rs  manager.rs  mod.rs  prompt.rs  retriever.rs  tools.rs
src/api/: agent.rs  animals.rs  app.rs  feeds.rs  mod.rs  norm_resolution.rs  norms.rs  prices.rs  rations.rs  workspace.rs
src/db/: animals.rs  feed_labels.rs  feeds.rs  (+7 more)
tests/: ai_filter_test.rs  api_prices_test.rs  cost_optimization_coverage.rs  db_prices_test.rs  scraper_test.rs
(+198 files in other folders)
